--- a/index.html
+++ b/index.html
@@ -138,13 +138,13 @@
 			</div>
 			<div class="col-lg-1 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.6s"></div>
 			<div class="col-lg-5 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="0.9s">
-				<i class="icon-mobile medium-icon"></i>
+				<i class="icon-bargraph medium-icon"></i>
 					<h3>¿QUÉ ES UN ESTUDIO<br>DE MYSTERY SHOPPERS?</h3>
 					<hr>
 					<p>Es un estudio de mercado cualitativo ya que se basa en la percepción que se tiene en la experiencia de compra o de consumo. <br><br>El objetivo es medir la calidad del servicio.<br><br>El ejecutivo a quien se encarga la misión, de manera encubierta realiza la compra o consumo, y mide, en base a parámetros previamente establecidos, entre la empresa y nosotros, la experiencia vivida.<br><br><br><br>
 			</div>
 			<div class="col-lg-5 col-md-4 col-sm-4 wow fadeInUp" data-wow-delay="1s">
-				<i class="icon-laptop medium-icon"></i>
+				<i class="icon-documents medium-icon"></i>
 					<h3>¿POR QUÉ HACER UN ESTUDIO<br>DE MYSTERY SHOPPERS?</h3>
 					<hr>
 					<p>Un estudio, profesionalmente hecho, de Mystery Shopping, le proporcionará información valiosa para mejorar el servicio en su organización, mantener o incrementar altos niveles de satisfacción en sus clientes, y conservar la lealtad de ellos. Esto redundará en mayores ventas y mejores índices de rentabilidad.<br><br>Señala áreas de debilidad y posibles amenazas lo que le permitirá establecer planes de acción concretos para cambiar esas debilidades y amenazas en oportunidades y fuerzas.<br><br>Brinda la oportunidad de conocer el apego y cumplimiento de sus empleados a las políticas de la empresa dando así la oportunidad de reconocer su desempeño.</p>
